:bug: Fix image will be covered by high priority selector

--- a/src/js/halo/index.css
+++ b/src/js/halo/index.css
@@ -251,9 +251,7 @@
   display: flex;
   width: 100%;
 }
-.gallery .image-list .container .img {
-  width: auto!important;
-  max-width: unset!important;
+.gallery .image-list .vditor--gallery-container .img {
   border-radius: 3px !important;
 }
 .gallery.gallery.grid .image-list {
@@ -261,13 +259,13 @@
   column-gap: 2%;
   row-gap: 10px;
 }
-.gallery.gallery.grid .image-list .container {
+.gallery.gallery.grid .image-list .vditor--gallery-container {
   width: 32%;
   height: 0;
   position: relative;
   padding-bottom: 32%;
 }
-.gallery.gallery.grid .image-list .container .img {
+.gallery.gallery.grid .image-list .vditor--gallery-container .img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -286,10 +284,12 @@
   width: 100%;
   gap: 10px;
 }
-.gallery.gallery.linear .image-list .container {
-  height: 400px;
+.gallery.gallery.linear .image-list .vditor--gallery-container {
+  height: 300px;
 }
-.gallery.gallery.linear .image-list .container .img {
+.gallery.gallery.linear .image-list .vditor--gallery-container .img {
   height: 99%;
+  width: auto!important;
+  max-width: unset!important;
 }
 
